# End_to_End_Loan_approval_on_GCP

./: README.md  pyproject.toml
models/: GBM_Model_version1.pkl
notebooks/: 01_Load_raw_data.ipynb  02_validate_raw_data.ipynb  03_Getting_our_training_data.ipynb  Training_our_Model.ipynb
src/: classify.py  feature_importance.py
