[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Sameer Ahmad <samimughal7786@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fancyimpute="^0.7.0"
imblearn="^0.0"
joblib="^1.3.1"
matplotlib="^3.7.2"
numpy="^1.24.4"
pandas="^1.3.5"
scikit_learn="^1.3.0"
scipy="^1.10.1"
seaborn="^0.12.2"
six="^1.16.0"
xgboost="^1.7.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
